af_earwax: copy input buffer properties to output

In particular, fix timestamps, partially address trac ticket #375.